--- a/css/home.css
+++ b/css/home.css
@@ -13,7 +13,29 @@ body{
 .logo {
     display: flex;
     justify-content: flex-start;
-    
+    cursor: pointer;
     align-items: flex-start;
     width: 1%;
+}
+
+.banner {
+    padding: 1em;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+   gap: 2em;
+   cursor: pointer;
+}
+
+#banner2 {
+    border-radius: 22px;
+}
+
+.lista{
+    display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+   padding: 1em; 
+   gap: 1em ;
+   cursor: pointer;
 }
