--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -8,7 +8,7 @@
 body {
 
   font-family: 'century gothic', sans-serif;
-  font-size: 2vh;
+  font-size: 2dvh;
   color: #ffffff;
   font-weight: 600;
   padding: 70px;
@@ -27,7 +27,7 @@ body {
 
 
 img {
-    width: 15vw;
+    width: 15dvw;
     height: auto;
     margin-top: 20px ;
     object-fit: cover;  
@@ -39,8 +39,8 @@ form {
     flex-direction: column;
     align-items: center;
     justify-content: space-around ;
-    width: 50vw;
-    height: 65vh;
+    width: 50dvw;
+    height: 65dvh;
     background-color: #001A4C;
     opacity: 92%;
     border-radius: 30px;
@@ -58,8 +58,8 @@ label{
 input {
     background-color: #c9c9c9;
     font-family: 'century gothic', sans-serif;
-    width: 40vw;
-    height: 6vh;
+    width: 40dvw;
+    height: 6dvh;
     display: flex;
     justify-content: space-between;
     border-radius: 5px;
@@ -74,11 +74,11 @@ input {
     justify-content: center;
     flex-direction: column;
     align-items: center;  
-    margin-top: 2vh;
+    margin-top: 2dvh;
     font-family: 'century gothic', sans-serif;
     font-weight: 700;
-    width: 40vw;
-    height: 6vh;
+    width: 40dvw;
+    height: 6dvh;
     border-radius: 9px;
     cursor: pointer;
     border-color: #ffffff;
@@ -88,6 +88,6 @@ input {
 a{
     font-family: 'century gothic', sans-serif;
     color: #ffffff;
-    margin-bottom: 3vh;
+    margin-bottom: 3dvh;
     font-weight: 100;
 }
