--- a/css/home.css
+++ b/css/home.css
@@ -2,9 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+}
 
-body{
+body {
     background-color: rgb(0, 0, 0);
     font-family: 'Courier New', Courier, monospace;
     color: white;
@@ -19,29 +19,63 @@ body{
     margin-top: 2dvh;
 }
 
-.banner {
+#bannerHeader {
+    overflow: hidden;
     padding: 1em;
-   display: flex;
-   flex-direction: row;
-   justify-content: space-around;
-   gap: 2em;
-   cursor: pointer;
-   opacity: 45%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    gap: 2rem;
+    opacity: 45%;
+}
+
+#bannerHeader img {
+    cursor: pointer;
+    position: relative;
+
+}
+
+#banner1 {
+    border-radius: 22px;
+    position: fixed;
+    left: -400px;
 }
 
 #banner2 {
     border-radius: 22px;
+    position: fixed;
+    left: -400px;
 }
+
+#bannerPrincipal {
+    border-radius: 22px;
+    justify-content: center;
+    left: -400px;
+}
+
 
 /* .listas{
     opacity: 20%;
 } */
-.lista{
+.lista {
     display: flex;
-   flex-direction: row;
-   justify-content: space-around;
-   padding: 1em; 
-   gap: 1em ;
-   cursor: pointer;
-   opacity: 45%;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 1em;
+    gap: 1em;
+    cursor: pointer;
+    opacity: 50%;
+}
+
+.bg {
+    background-color: red;
+}
+
+.bg1 {
+    background-color: yellow;
+}
+
+.bg2 {
+    background-color: green;
 }
