--- a/css/alterar.css
+++ b/css/alterar.css
@@ -15,7 +15,7 @@
 } */
 body {
     margin: 0;
-    background-color: #000;
+    background-color: #d60101;
     font-family: sans-serif;
     color: #ffffff;
   }
