--- a/css/home.css
+++ b/css/home.css
@@ -5,9 +5,62 @@
 }
 
 body {
+    margin: 0;
+    background-color: #000;
+    font-family: sans-serif;
+    color: #ffffff;
+  }
+  .sidebar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 60px;            /* largura estreita */
+    height: 100vh;          /* ocupa tela toda */
+    background: #00040a;       /* fundo preto */
+    opacity: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;    /* centralizar ícones na horizontal */
+    padding: 10px 0;
+    gap: 30px;              /* espaço entre os ícones */
+  }
+
+  /* Ícones */
+   .sidebar #icones {
+    color: #ffffff;
+    text-decoration: none;        /* tamanho do ícone */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 4dvw;
+    height: 4px;
+    border-radius: 8px;
+    transition: background 0.3s;
+  }
+
+  .sidebar #icones :hover {
+    background: rgba(255, 255, 255, 0.1);
+  }
+
+ 
+  .linhas{
+    display: flex;
+    align-items: center;
+   margin-top: 2dvh;
+   margin-bottom: 5dvh;
+  }
+.configuracoes {
+    display: flex;
+    align-items: center;
+   margin-top: 50dvh;
+}
+
+main{
     background-color: rgb(0, 0, 0);
     font-family: 'Courier New', Courier, monospace;
     color: white;
+    margin-right:60px;
+    padding:20px;
 }
 
 .logo {
