--- a/css/home.css
+++ b/css/home.css
@@ -114,23 +114,37 @@ main{
 }
 
 .gallery-image.left {
+    width: clamp(400px, 55dvw, 800px);
     opacity: 0.6;
-    transform: rotateY(25deg) scale(0.9);
+    transform: rotateY(-10deg) scale(0.9);
 }
 
 .gallery-image.right {
+    width: clamp(400px, 55dvw, 800px);
     opacity: 0.6;
-    transform: rotateY(-25deg) scale(0.9);
+    transform: rotateY(10deg) scale(0.9);
 }
 
 .gallery-image.center {
-    width: clamp(300px, 45vw, 600px);
+    width: clamp(500px, 60dvw, 1100px);
     transform: scale(1) translateY(-1vh);
     opacity: 1;
     z-index: 2;
     box-shadow: 0 12px 30px rgba(0, 0, 0, 0.6);
 }
-
+.cartao{
+    position: relative;
+}
+.overlay{
+    top: 80% ;
+    bottom: 0;
+    left: 1%;
+    right:0 ;
+    position: absolute;
+    font-family: 'century gothic', sans-serif;
+    font-weight: 700;
+    font-size: 1.5dvw;
+}
 
 @media (max-width: 600px) {
     .gallery {
@@ -145,47 +159,7 @@ main{
         width: clamp(120px, 30vw, 180px);
     }
 }
-/* #bannerHeader {
-    overflow: hidden;
-    padding: 1em;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    gap: 2rem;
-}
 
-#bannerHeader img {
-    cursor: pointer;
-    position: relative;
-
-}
-
-#banner1 {
-    border-radius: 22px;
-    position: fixed;
-    left: -400px;
-    opacity: 50%;
-}
-
-#banner2 {
-    border-radius: 22px;
-    position: fixed;
-    left: -400px;
-    opacity: 60%;
-}
-
-#bannerPrincipal {
-    border-radius: 22px;
-    justify-content: center;
-    left: -400px;
-    opacity: 80%;
-} */
-
-
-/* .listas{
-    opacity: 20%;
-} */
 .lista {
     display: flex;
     flex-direction: row;
