--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -7,14 +7,14 @@
 
 body {
 
-  font-family: 'century gothic', sans-serif;
-  font-size: 2dvh;
-  color: #ffffff;
-  font-weight: 600;
-  padding: 70px;
-  margin: auto;
-  background-image: url("/img/fundo.png");
-  background-repeat: repeat;
+    font-family: 'century gothic', sans-serif;
+    font-size: 2dvh;
+    color: #ffffff;
+    font-weight: 600;
+    padding: 70px;
+    margin: auto;
+    background-image: url("/img/fundo.png");
+    background-repeat: repeat;
 }
 
 
@@ -29,8 +29,8 @@ body {
 img {
     width: 15dvw;
     height: auto;
-    margin-top: 20px ;
-    object-fit: cover;  
+    margin-top: 20px;
+    object-fit: cover;
 }
 
 
@@ -38,7 +38,7 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around ;
+    justify-content: space-around;
     width: 50dvw;
     height: 65dvh;
     background-color: #001A4C;
@@ -47,8 +47,8 @@ form {
     box-shadow: 0 0 5px rgba(0, 0, 0, 1);
 }
 
- 
-label{
+
+label {
     display: flex;
     align-items: flex-start;
 
@@ -69,25 +69,30 @@ input {
 }
 
 
-.cadastro{
+.cadastro {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    align-items: center;  
+    align-items: center;
     margin-top: 2dvh;
     font-family: 'century gothic', sans-serif;
     font-weight: 700;
+    background-color: #ffffff;
+    color: #182340;
     width: 40dvw;
     height: 6dvh;
     border-radius: 9px;
     cursor: pointer;
-    border-color: #ffffff;
+    border-color: #556e94;
+    text-decoration: none;
+    /* tira o sublinhado */
 }
 
 
-a{
+a {
     font-family: 'century gothic', sans-serif;
     color: #ffffff;
     margin-bottom: 3dvh;
     font-weight: 100;
+    text-decoration: none;
 }
