--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
 }
 
-
 body {
 
     font-family: 'century gothic', sans-serif;
@@ -18,21 +17,12 @@ body {
 }
 
 
-.background {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
-
-
 img {
     width: 15dvw;
     height: auto;
     margin-top: 20px;
     object-fit: cover;
 }
-
 
 form {
     display: flex;
@@ -47,13 +37,11 @@ form {
     box-shadow: 0 0 5px rgba(0, 0, 0, 1);
 }
 
-
 label {
     display: flex;
     align-items: flex-start;
-
+    
 }
-
 
 input {
     background-color: #c9c9c9;
@@ -68,6 +56,33 @@ input {
     border-color: #c9c9c9;
 }
 
+a {
+    font-family: 'century gothic', sans-serif;
+    color: #ffffff;
+    margin-bottom: 3dvh;
+    font-weight: 100;
+    text-decoration: none;
+}
+
+.btn-cadastrar {
+    background-color: #ffffff;
+    width: 40dvw;
+    height: 6dvh;
+    border-radius: 7px;
+    font-family: 'century gothic', sans-serif;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2dvh;
+}
+
+.background {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
 
 .cadastro {
     display: flex;
@@ -88,11 +103,3 @@ input {
     /* tira o sublinhado */
 }
 
-
-a {
-    font-family: 'century gothic', sans-serif;
-    color: #ffffff;
-    margin-bottom: 3dvh;
-    font-weight: 100;
-    text-decoration: none;
-}
